# TwAnalyze

./: .gitignore  Makefile  README.md  pyproject.toml
Main/: GPT.py  __init__.py  __main__.py  extractor.py  loggingsettings.py  models.py  visual.py
Main/config/: defaults.py
