[tool.poetry]
name = "twanalyze"
version = "0.1.0"
description = "application for analyze user data from x.com"
authors = ["Bratxems"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.49.0"
peewee = "^3.17.8"
modconfig = "^1.2.1"
peewee-aio = "^2.0.0"
aiosqlite = "^0.20.0"
openai = "^1.57.0"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
